2010-01-19  Daniel Bates  <dbates@rim.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=33851

        Fixes an issue in the Apple Mac port where ScrollView::platformVisibleContentRect
        returns the rectangle of the document within the content view of
        the scroll view (i.e. the rectangle not including scrollbars) when
        the parameter includeScrollbars == true

        Currently, this behavior contradicts both the comment in ScrollView.h
        for method visibleContentRect as well as the behavior in
        ScrollView::visibleContentRect() for a platform-independent scroll view.

        Instead, it should return the rectangle whose dimensions include
        the scrollbars.

        Also, removes some extra whitespace at the end of the lines.

        No tests included because we cannot test this using either DRT
        or a manual test.

        * platform/mac/ScrollViewMac.mm:
        (WebCore::ScrollView::platformVisibleContentRect): If includeScrollbars == true
        then return the rectangle whose dimensions are that of
        the frame (i.e. -[NSScrollView frame]).


Canonical link: https://commits.webkit.org/44890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53490 268f45cc-cd09-0410-ab3c-d52691b4dbfc